--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Smith - Professional Portfolio</title>
+    <title>Sunday Emmanuel - Professional Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://ai-public.creatie.ai/gen_page/tailwind-custom.css" rel="stylesheet">
@@ -453,7 +453,7 @@
             </div>
             <div class="mt-8 border-t border-gray-700 pt-8">
                 <p class="text-base text-gray-400 text-center">
-                    © 2024 John Smith. All rights reserved.
+                    © 2025 Sunday Emmanuel. All rights reserved.
                 </p>
             </div>
         </div>
